delo-installer (0.002) UNRELEASED; urgency=low

  * Martin Michlmayr
     - Only use delo on the r3k-kn02 and r4k-kn04 sub-architectures
       (i.e. DECstations).
  * Colin Watson
    - Subarchitecture: is whitespace-separated; remove comma.

 -- Martin Michlmayr <tbm@cyrius.com>  Wed, 17 Mar 2004 20:54:34 +0000

delo-installer (0.001) unstable; urgency=low

  * First release, based on arcboot-installer 0.006
  * Miguel Figueiredo
    - Updated Portuguese translation (pt.po)
  * Bart Cornelis
    - Added Dutch translation (nl.po)
    - Merged Norwegian Bokmael (nb.po) translations from skolelinux-cvs
    - Merged Norwegian Nynorsk (nn.po) translations from skolelinux-cvs
  * Dennis Stampfer
    - Initial German translation (de.po).
  * Kenshi Muto
    - Added Japanese translation (ja.po)
  * Christian Perrier
    - Added French translation (fr.po)
  * Ognyan Kulev
    - Added bulgarian translation (bg.po).
  * Konstantinos Margaritis
    - Added Greek translation (el.po)
  * Jure Cuhalev
    - Added/updated slovenian translation (sl.po).
  * Miroslav Kure
    - Added Czechtranslation (cs.po).
  * Bartosz Fenski
    - Added Polish (pl) translation.
  * Marco Ferra
    - Initial Portuguese translation (pt.po).
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
    - Made translation of the template which reads
      "Disk for boot loader installation:" be consistent between
      delo-installer and arcboot-installer.
  * Giuseppe Sacco
    - Added italian translation.
    - Applied patch for normalizing menus and some italian translation (it.po)
  * Teófilo Ruiz Suárez
    - Created Spanish translation (es.po)
  * Claus Hindsgaul
    - Added Danish translation (da.po).
  * Marius Gedminas
    -  Added Lithuanian translation (lt.po).
  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
    - Initial Traditional Chinese translation (zh_TW.po), by Tetralet
    - Updated Traditional Chinese translation (zh_TW.po), by Tetralet