@@ -1,4 +1,0 @@
-#!/bin/sh
-set -e
-
-[ -x /target/sbin/delo ]
