@@ -11,23 +11,18 @@ ARCH=$(shell dpkg --print-architecture)
 FILENAME=$(PACKAGE)_$(VERSION)_$(ARCH).udeb
 PRIORITY=$(shell grep ^Priority: debian/control | cut -d ' ' -f 2)
 
-
 # This is the debhelper compatability version to use.
 export DH_COMPAT=3
 
 # Udebs have no postrm file, don't make one
 export DH_OPTIONS=-n
 
-build: build-stamp
-build-stamp:
+build:
 	dh_testdir
-
-	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp
 	rm -f debian/files~
 	dh_clean
 
@@ -36,13 +31,11 @@ install: build
 	dh_testroot
 	dh_clean -k
 
-
 # Build architecture-independent files here.
 binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_installdebconf
-	cp debian/isinstallable debian/$(PACKAGE)/DEBIAN/
 	dh_installdeb 
 	dh_gencontrol -- -fdebian/files~
 	dpkg-distaddfile $(FILENAME) debian-installer $(PRIORITY)
