@@ -5,6 +5,8 @@ delo-installer (0.002) UNRELEASED; urgency=low
        (i.e. DECstations).
   * Colin Watson
     - Subarchitecture: is whitespace-separated; remove comma.
+  * Thiemo Seufer
+      - Fix installation, remove the isinstallable check.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Wed, 17 Mar 2004 20:54:34 +0000
 
